# codex-limit

./: .gitignore  CodexLimit.py  MANIFEST.in  README.md  pyproject.toml  setup.py
codex_limit/: __main__.py  cocoa_app.py  controller.py  install.py  metrics.py  models.py  reader.py  store.py
codex_limit/assets/: CodexLimit.icns
scripts/: install.sh
tests/: test_controller.py  test_install.py  test_metrics_store.py  test_reader.py
