[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-limit"
version = "0.1.0"
description = "macOS menu bar widget for Codex weekly limit burn rate."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
packaging = [
    "pyobjc-framework-Cocoa>=12.1; sys_platform == 'darwin'",
    "py2app>=0.28.9; sys_platform == 'darwin'",
]

[project.scripts]
codex-limit = "codex_limit.__main__:main"

[tool.setuptools.packages.find]
include = ["codex_limit*"]
